Updated email signup page sources

--- a/tips/dates/2013-10.md
+++ b/tips/dates/2013-10.md
@@ -5,6 +5,7 @@ permalink: /tips/2013/10/
 breadcrumb: tips
 archive-name: "October 2013"
 archive-type: Monthly
+page_source: Blog201310
 sections:
  intro: Blog
  brief: October 2013 Archive
