--- a/tips/dates/2013-12.md
+++ b/tips/dates/2013-12.md
@@ -5,6 +5,7 @@ permalink: /tips/2013/12/
 breadcrumb: tips
 archive-name: "December 2013"
 archive-type: Monthly
+page_source: Blog201312
 sections:
  intro: Blog
  brief: December 2013 Archive
