--- a/tips/dates/2014-01.md
+++ b/tips/dates/2014-01.md
@@ -5,6 +5,7 @@ permalink: /tips/2014/01/
 breadcrumb: tips
 archive-name: "January 2014"
 archive-type: Monthly
+page_source: Blog201401
 sections:
  intro: Blog
  brief: January 2014 Archive
