--- a/tips/dates/2014-05.md
+++ b/tips/dates/2014-05.md
@@ -5,6 +5,7 @@ permalink: /tips/2014/05/
 breadcrumb: tips
 archive-name: "May 2014"
 archive-type: Monthly
+page_source: Blog201405
 sections:
  intro: Blog
  brief: May 2014 Archive
