--- a/tips/dates/2016-10.md
+++ b/tips/dates/2016-10.md
@@ -5,6 +5,7 @@ permalink: /tips/2016/10/
 breadcrumb: tips
 archive-name: "October 2016"
 archive-type: Monthly
+page_source: Blog201610
 sections:
  intro: Blog
  brief: October 2016 Archive
