--- a/tips/dates/2016-12.md
+++ b/tips/dates/2016-12.md
@@ -5,6 +5,7 @@ permalink: /tips/2016/12/
 breadcrumb: tips
 archive-name: "December 2016"
 archive-type: Monthly
+page_source: Blog201612
 sections:
  intro: Blog
  brief: December 2016 Archive
