--- a/tips/dates/2017-01.md
+++ b/tips/dates/2017-01.md
@@ -5,6 +5,7 @@ permalink: /tips/2017/01/
 breadcrumb: tips
 archive-name: "January 2017"
 archive-type: Monthly
+page_source: Blog201701
 sections:
  intro: Blog
  brief: January 2017 Archive
