--- a/tips/dates/2017-09.md
+++ b/tips/dates/2017-09.md
@@ -5,6 +5,7 @@ permalink: /tips/2017/09/
 breadcrumb: tips
 archive-name: "September 2017"
 archive-type: Monthly
+page_source: Blog201709
 sections:
  intro: Blog
  brief: September 2017 Archive
