--- a/tips/dates/2017-10.md
+++ b/tips/dates/2017-10.md
@@ -5,6 +5,7 @@ permalink: /tips/2017/10/
 breadcrumb: tips
 archive-name: "October 2017"
 archive-type: Monthly
+page_source: Blog201710
 sections:
  intro: Blog
  brief: October 2017 Archive
