--- a/tips/dates/2017-12.md
+++ b/tips/dates/2017-12.md
@@ -5,6 +5,7 @@ permalink: /tips/2017/10/
 breadcrumb: tips
 archive-name: "December 2017"
 archive-type: Monthly
+page_source: Blog201712
 sections:
  intro: Blog
  brief: December 2017 Archive
